--- a/protocol/pom.xml
+++ b/protocol/pom.xml
@@ -25,7 +25,7 @@
   <properties>
     <version.java>8</version.java>
     <license.header>com/mycila/maven/plugin/license/templates/APACHE-2.txt</license.header>
-    <protocol.version>3</protocol.version>
+    <protocol.version>4</protocol.version>
   </properties>
 
   <dependencies>
@@ -180,6 +180,7 @@
           <arguments>
             <argument>${project.build.outputDirectory}/protocol.xml</argument>
             <argument>${project.build.outputDirectory}/cluster-management-protocol.xml</argument>
+            <argument>${project.build.outputDirectory}/otel.xml</argument>
           </arguments>
           <workingDirectory>${project.build.directory}/generated-sources</workingDirectory>
         </configuration>
